--- a/doremi.cabal
+++ b/doremi.cabal
@@ -19,7 +19,12 @@ executable doremi
   other-modules:       Todo, DateTime
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                     , lens >= 4.15 && < 5
                      , text >= 1.2 && < 2
                      , process >= 1.6 && < 2
-                     , containers >= 0.5 && < 1
+                     , unordered-containers >= 0.2 && < 1
+                     , vector >= 0.12 && < 1
                      , yaml >= 0.8 && < 1
+                     , text >= 1.2 && < 2
+                     , aeson >= 1.2 && < 2
+                     , scientific >= 0.3 && < 1
