--- a/doremi.cabal
+++ b/doremi.cabal
@@ -18,13 +18,13 @@ executable doremi
   main-is:             Main.hs
   other-modules:       Todo, DateTime
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
-                     , lens >= 4.15 && < 5
-                     , text >= 1.2 && < 2
-                     , process >= 1.6 && < 2
-                     , unordered-containers >= 0.2 && < 1
-                     , vector >= 0.12 && < 1
-                     , yaml >= 0.8 && < 1
-                     , text >= 1.2 && < 2
-                     , aeson >= 1.2 && < 2
-                     , scientific >= 0.3 && < 1
+  build-depends:       base                 >= 4.7   && < 5
+                     , aeson                >= 1.2   && < 2
+                     , hspec                >= 2.4   && < 3
+                     , lens                 >= 4.15  && < 5
+                     , process              >= 1.6   && < 2
+                     , scientific           >= 0.3   && < 1
+                     , text                 >= 1.2   && < 2
+                     , unordered-containers >= 0.2   && < 1
+                     , vector               >= 0.12  && < 1
+                     , yaml                 >= 0.8   && < 1
